Html Basics Challenge

--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
       <p>If you have no prior experience with html, or coding in general we will provide enough material <br> to get you through all your coding desires</p>
       <p>We also offer other beginnner friendly courses from python to java to css. <br> Bassicaly whatever your heart desires.</p>
       <p>Take your time dont rush and we can not wait to take this journey with you!!</p>
+
+      <h2><b>List of Laptop brands</b></h2>
+        <ul>
+            <li>Hp</li>
+            <li>Lenovo</li>
+            <li>Apple</li>
+            <li>Dell</li>
+            <li>Acer</li>
+            <li>Asus</li>
+            <li>Toshiba</li>
+            <li>Samsung</li>
+            <li>Raser</li>
+            <li>Sony</li>
+        </ul>
+
 </body>
 </html>
