Html Basics Challenge

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <li>Raser</li>
             <li>Sony</li>
         </ul>
-
+        <img src="Assets/iStock-1693812103.jpg"
+            width="820"
+            height="360"/>
+        <img src="Assets/pexels-pixabay-41162.jpg"
+        width="820"
+        height="360"/>
+        <img src="Assets/hq720.jpg"
+        width="820"
+        height="360"/>
 </body>
 </html>
